cabal-version:       3.0

name:                cabal-lint
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Florian YUSUF ALI
maintainer:          fyusuf-a@student.42.fr
category:            Development
extra-source-files:  CHANGELOG.md

executable cabal-lint
  main-is:             Main.hs
  build-depends:       base,
                       typed-process,
                       regex-posix,
                       text,
                       bytestring,
                       directory,
                       filepath
  default-language:    Haskell2010
